feat: added linter for service, gitignore files